--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^16.0.0",
     "@types/mdx": "^2.0.13",
     "groq-sdk": "^0.34.0",
+    "mongoose": "^8.19.2",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
